--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,7 @@ a:visited {
     #paragraphs {
         max-width: 550px;
         margin: 0 5% auto;
+        margin-top: 1em;
         font-size: 16px;
         font-family: "JBM-Regular";
         color: white;
